가위바위보 초기설정...2

--- a/main.html
+++ b/main.html
@@ -18,8 +18,8 @@
     <br/>
 
     <!-- 가위바위보 이미지 출력-->
-    <img id = "youSubmit" src = "black.png" sizes = "10px"></img>
-    <img id = "computerSubmit" src = "black.png"></img>
+    <img id = "youSubmit" src = "img\black.png" sizes = "10px"></img>
+    <img id = "computerSubmit" src = "img\black.png"></img>
 
 
     <p>Choose One !</p>
